syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/heritechie/go-book-catalog/book-repo-svc/pkg/pb";

message Author {
    string name = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
}