syntax = "proto3";

package pb;

import "publisher.proto";

option go_package = "github.com/heritechie/go-book-catalog/book-repo-svc/pkg/pb";

message GetAllPublisherRequest {}

message GetAllPublisherResponse {
    repeated Publisher publishers = 1;
}
